--- a/src/effective_rust/testing.tex
+++ b/src/effective_rust/testing.tex
@@ -491,8 +491,8 @@ test, and \code{add\_two\_0} for the function test. These will auto increment wi
 
 \blank
 
-% TODO make documentation chapter a hyperref
-We haven’t covered all of the details with writing documentation tests. For more, please see the Documentation chapter.
+We haven’t covered all of the details with writing documentation tests (see \nameref{sec:effective_documentation}). For more, please see 
+the Documentation chapter.
 
 \blank
 
