--- a/src/syntax/attributes.tex
+++ b/src/syntax/attributes.tex
@@ -36,9 +36,8 @@ fn check() {
 }
 \end{rustc}
 
-% TODO make tests a hyperref
 It is marked with \code{\#[test]}. This means it's special: when you run tests, this function will execute. When you compile as usual, 
-it won't even be included. This function is now a test function.
+it won't even be included. This function is now a test function (see \nameref{sec:effective_testing}).
 
 \blank
 
