--- a/src/syntax/comments.tex
+++ b/src/syntax/comments.tex
@@ -51,5 +51,5 @@ There's another macro, \code{assert!}, which \panic s if the value passed to it 
 
 \blank
 
-% TODO Make rustdoc a hyperref
-You can use the rustdoc tool to generate HTML documentation from these doc comments, and also to run the code examples as tests!
+You can use the \code{rustdoc} tool to generate HTML documentation from these doc comments, and also to run the code examples as tests
+(see \nameref{sec:effective_documentation})!
