--- a/src/syntax/generics.tex
+++ b/src/syntax/generics.tex
@@ -128,7 +128,6 @@ impl<T> Point<T> {
 }
 \end{rustc}
 
-% TODO make trait bounds a hyperref
 So far you've seen generics that take absolutely any type. These are useful in many cases: you've already seen \code{Option<T>}, and later 
 you'll meet universal container types like \href{https://doc.rust-lang.org/std/vec/struct.Vec.html}{Vec<T>}. On the other hand, often you 
-want to trade that flexibility for increased expressive power. Read about trait bounds to see why and how.
+want to trade that flexibility for increased expressive power. Read about trait bounds to see why and how (see \nameref{sec:syntax_traits}).
