--- a/src/syntax/patterns.tex
+++ b/src/syntax/patterns.tex
@@ -126,8 +126,8 @@ This prints \code{y is 0}.
 
 \blank
 
-% TODO make tuples and enums hyperrefs
-This 'destructuring' behavior works on any compound data type, like tuples or enums.
+This 'destructuring' behavior works on any compound data type, like tuples (see \nameref{sec:syntax_primitives}) or enums 
+(see \nameref{sec:syntax_enums}).
 
 \subsection*{Ignoring bindings}
 
