--- a/src/syntax/strings.tex
+++ b/src/syntax/strings.tex
@@ -190,5 +190,5 @@ let world = "world!".to_string();
 let hello_world = hello + &world;
 \end{rustc}
 
-% TODO make deref coercion a hyperref
-This is because \code{\&String} can automatically coerce to a \code{\&str}. This is a feature called 'Deref coercions'.
+This is because \code{\&String} can automatically coerce to a \code{\&str}. This is a feature called 'Deref coercions' (see 
+\nameref{sec:syntax_derefCoercions}).
