--- a/src/gettingstarted.tex
+++ b/src/gettingstarted.tex
@@ -296,18 +296,16 @@ here. The first is that it's indented with four spaces, not tabs.
 
 \blank
 
-% TODO make macro a hyperref to the macro section
-The second important part is the \code{println!()} line. This is calling a Rust \emph{macro}, which is how metaprogramming is done 
-in Rust. If it were calling a function instead, it would look like this: \code{println()} (without the !). We'll discuss Rust macros 
-in more detail later, but for now you only need to know that when you see a \code{!} that means that you're calling a macro 
-instead of a normal function.
+The second important part is the \code{println!()} line. This is calling a Rust \emph{macro} (see \nameref{sec:syntax_macros}), which 
+is how metaprogramming is done in Rust. If it were calling a function instead, it would look like this: \code{println()} (without the !). 
+We'll discuss Rust macros in more detail later, but for now you only need to know that when you see a \code{!} that means that you're 
+calling a macro instead of a normal function.
 
 \blank
 
-% TODO make statically allocated string a hyperref to the section about the stack and heap
 Next is \code{"Hello, world!"} which is a \emph{string}. Strings are a surprisingly complicated topic in a systems programming 
-language, and this is a statically allocated string. We pass this string as an argument to \code{println!}, which prints the 
-string to the screen. Easy enough!
+language, and this is a statically allocated string (see \nameref{sec:effective_stackAndHeap}). We pass this string as an argument 
+to \code{println!}, which prints the string to the screen. Easy enough!
 
 \blank
 
@@ -611,7 +609,6 @@ Now that you've got the tools down, we'll cover more about the Rust language its
 
 \blank
 
-% TODO make syntax and semantics a hyperref
-You have two options: Dive into a project with 'Learn Rust', or start from the bottom and work your way up with 
-'Syntax and Semantics'. More experienced systems programmers will probably prefer 'Learn Rust', while those from 
+You have two options: Dive into a project with '\nameref{sec:tutorial}', or start from the bottom and work your way up with 
+'\nameref{sec:syntax}'. More experienced systems programmers will probably prefer '\nameref{sec:tutorial}', while those from 
 dynamic backgrounds may enjoy either. Different people learn differently! Choose whatever's right for you.
