--- a/src/syntax/macros.tex
+++ b/src/syntax/macros.tex
@@ -727,8 +727,7 @@ one at a time. Define the others as \code{unimplemented!} until you're ready to 
 
 \subsection*{Procedural macros}
 
-% TODO make compiler plugins a hyperref
-If Rust's macro system can't do what you need, you may want to write a compiler plugin instead. Compared to \code{macro\_rules!} macros, 
-this is significantly more work, the interfaces are much less stable, and bugs can be much harder to track down. In exchange you get the 
-flexibility of running arbitrary Rust code within the compiler. Syntax extension plugins are sometimes called 'procedural macros' for 
-this reason.
+If Rust's macro system can't do what you need, you may want to write a compiler plugin instead (see \nameref{sec:nightly_compilerPlugins}). 
+Compared to \code{macro\_rules!} macros, this is significantly more work, the interfaces are much less stable, and bugs can be much 
+harder to track down. In exchange you get the flexibility of running arbitrary Rust code within the compiler. Syntax extension plugins 
+are sometimes called 'procedural macros' for this reason.
