--- a/src/syntax/references_borrowing.tex
+++ b/src/syntax/references_borrowing.tex
@@ -2,11 +2,10 @@ This guide is one of three presenting Rust's ownership system. This is one of Ru
 which Rust developers should become quite acquainted. Ownership is how Rust achieves its largest goal, memory safety. There are 
 a few distinct concepts, each with its own chapter:
 
-% TODO make ownership and lifetimes hyperrefs
 \begin{itemize}
-  \item{ownership, which you're reading now}
+  \item{\nameref{sec:syntax_ownership}, which you're reading now}
   \item{borrowing, and their associated feature 'references'}
-  \item{lifetimes, an advanced concept of borrowing}
+  \item{\nameref{sec:syntax_lifetimes}, an advanced concept of borrowing}
 \end{itemize}
 
 These three chapters are related, and in order. You'll need all three to fully understand the ownership system.
